--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.10"
 fastapi = "^0.92.0"
 pandas = "^1.5.3"
 kucoin-python = "^1.0.11"
+uvicorn = "^0.20.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.1.0"
@@ -17,3 +18,6 @@ black = "^23.1.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+start = 'src.main:start'
