--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,8 +14,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Build the Docker image
     - run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-    - run: docker build . --file Dockerfile --tag crypto-historical-data-fetcher:latest
-    - run: docker push crypto-historical-data-fetcher:latest
-    - run: docker logout
+    # - run: docker build . --file Dockerfile --tag crypto-historical-data-fetcher:latest
+    # - run: docker push crypto-historical-data-fetcher:latest
+    # - run: docker logout
