--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,7 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build container
-    - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p '${{ secrets.DOCKER_PASSWORD }}'
-    - run: docker build . --file Dockerfile --tag crypto-historical-data-fetcher:latest
-    - run: docker push crypto-historical-data-fetcher:latest
-    - run: docker logout
+    - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p '${{ secrets.DOCKER_PASSWORD }}' &&  docker build . --file Dockerfile --tag crypto-historical-data-fetcher:latest && docker push crypto-historical-data-fetcher:latest && docker logout
