--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "Project aimed to fetch historical data for crypto, stock... No matter the timeframe."
 authors = ["BaptisteZloch <bzloch@hotmail.fr>"]
 readme = "README.md"
+packages = [{include = "src"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
